@@ -1,5 +1,10 @@
 2008-08-15  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-wired.c
+		- (pppoe_update_ui): try to pull PPPoE password out of keyring
+
+2008-08-15  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method-ttls.c
 	  src/wireless-security/ws-wep-key.c
 		- (eap_method_ttls_new, key_index_combo_changed_cb, ws_wep_key_new): add
